<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_book_solid"
            android:title="@string/menu_dictionary" />
        <item
            android:id="@+id/nav_kanjis"
            android:icon="@drawable/ic_book_solid"
            android:title="@string/menu_kanjis"/>
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/review_nav_txt" />
        <item
            android:id="@+id/nav_flash_cards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_flash_cards" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_comment_dots_solid"
            android:title="@string/menu_feedback" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:icon="@drawable/ic_user_cog_solid"
                android:title="@string/menu_configuration" />
            <item
                android:id="@+id/logout_btn"
                android:icon="@drawable/ic_sign_out_alt_solid"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
